--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png" />
 
-  <title>bidonsub</title>
+  <title>SubDoor</title>
   <link rel="manifest" href="manifest.json">
   <script type="text/javascript" src="https://appleid.cdn-apple.com/appleauth/static/jsapi/appleid/1/en_US/appleid.auth.js"></script>
   <!-- This script adds the flutter initialization JS code -->
