--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
   <title>Subdoor — Subscribe with crypto</title>
   <link rel="manifest" href="manifest.json">
   <script type="text/javascript" src="https://appleid.cdn-apple.com/appleauth/static/jsapi/appleid/1/en_US/appleid.auth.js"></script>
+  <script src="js/wallet-api.min.js"></script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
 </head>
